--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "demo.sahha.expo"
+      "bundleIdentifier": "com.sensable.expo"
     },
     "android": {
       "adaptiveIcon": {
